# deep-faker

./: README.md  System_Design.md  User_Guide.md  ecommerce_events.jsonl  pyproject.toml  test_now_faker.py  test_simplified_api.py  test_versioned_entities.py
examples/: E00_user_events_kafka.py  E03_user_purchase_product.py  README.md  e-commerce-events.md  ecommerce.py  trading.py
examples/output/: ecommerce_events.jsonl
src/deep_faker/: __init__.py  actions.py  base.py  cli.py  entity_manager.py  logging.py  outputs.py  simulation.py
tests/: test_ecommerce.py  test_multi_entity_flows.py  test_trading.py
