[project]
name = "deep-faker"
version = "0.0.1"
description = "Python-Native Event Mocking"
readme = "README.md"
authors = [{ name = "resink.ai", email = "shijing.lu@resink.ai" }]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "faker>=8.0.0",
    "python-dateutil>=2.8.2",
    "kafka-python>=2.0.2",
    "uuid>=1.30",
    "mysql-connector-python>=8.0.0",
]

[project.scripts]
deep-faker = "deep_faker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
